--- a/web/package.json
+++ b/web/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "3d-react-carousal": "^4.0.2",
+    "@types/jquery": "^3.5.8",
     "next": "12.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@types/node": "16.11.6",
-    "@types/react": "17.0.33",
+    "@types/node": "^16.11.6",
+    "@types/react": "^17.0.34",
     "eslint": "7",
     "eslint-config-next": "12.0.1",
     "typescript": "4.4.4"
